--- a/src/pages/pokemon/details/index.module.scss
+++ b/src/pages/pokemon/details/index.module.scss
@@ -21,13 +21,13 @@
     
     @media only screen and (max-width: 1023px) {
         &__stats{
-            margin: 8px 0;
+            margin: 8px;
         }
         &__ability{
-            margin: 8px 0;
+            margin: 8px;
         }
         &__type{
-            margin: 8px 0;
+            margin: 8px;
         }
     }
 }
